--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==4.3.0
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
+cryptography==44.0.2
 dnspython==2.7.0
 dotenv==0.9.9
 fastapi==0.115.11
@@ -9,12 +12,17 @@ idna==3.10
 mailersend==0.5.8
 motor==3.7.0
 nostr-sdk==0.40.0
-pydantic==1.10.21
+pycparser==2.22
+pydantic==2.10.6
 pydantic_core==2.27.2
+PyJWT==2.10.1
 pymongo==4.11.3
 python-dotenv==1.0.1
+python-http-client==3.3.7
+redis==5.2.1
 requests==2.32.3
 sniffio==1.3.1
+starkbank-ecdsa==2.2.0
 starlette==0.46.1
 typing_extensions==4.12.2
 urllib3==2.3.0
