--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "buffer": "^6.0.3",
     "noise-protocol": "^3.0.2",
     "nostr-tools": "^2.12.0",
